drobne poprawki - zadanie zgodnie z poleceniem

--- a/views/logged.pug
+++ b/views/logged.pug
@@ -8,6 +8,6 @@ html
                 a(href="/") Logout
             else
                 p U are unlogged! Please 
-                    a(href="/login") log in!
+                    a(href="/auth/google") log in!
 
             p Hello, what's up? <br> Nothing here!
